<resources>
    <string name="app_name">Branch App Meter</string>
    <string name="app_name_description">Branch Application Response Meter</string>
    <string name="start">Start</string>
    <string name="title">Stop Watch</string>
    <string name="start_time">00:00:00</string>
    <string name="reset">Reset</string>
    <string name="button_choose_app">Choose Application</string>
    <string name="start_time_hour">00</string>
    <string name="start_time_separator">:</string>
    <string name="button_choose_branch_code">Branch Code</string>
    <string name="submit_result">Submit Result</string>
    <string name="choose_app_dialog_title">Select Application</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="text">Text</string>
    <string name="dialog_title_input_branch">Input Branch ID</string>
    <string name="dialog_title_input_branch_hint">Branch Code</string>
    <string name="err_user_branchid_length">Branch ID should not be more than 4 characters</string>
    <string name="err_app_id_not_choosen">Please choose application first</string>
    <string name="err_branch_id_not_fill">Please input Branch ID first</string>
    <string name="err_submit_result">Please choose aplication and input branch code first</string>
    <string name="dialog_title_send_result">Sending Result</string>
    <string name="please_wait">Please wait...</string>
    <string name="err_sending_result">Failed to save result, please try again</string>
    <string name="created_by">created by rbzeta</string>
    <string name="dialog_title_fetch_app">Fetching Application</string>
    <string name="err_no_app">There is no application to benchmark</string>
    <string name="err_no_network_connection">Please check your network connection</string>
    <string name="text_user_profile">Please input your profile first</string>
    <string name="button_input_name">Your Name</string>
    <string name="button_input_pn">Your Personal Number</string>
    <string name="button_phone">Your Phone Number</string>
    <string name="button_save_profile">Done</string>
    <string name="number">NUMBER</string>
    <string name="phone">PHONE</string>
    <string name="dialog_title_input_name">Enter Your Name</string>
    <string name="dialog_title_input_name_hint">Your Name</string>
    <string name="dialog_title_input_pn">Enter Your Personal Number</string>
    <string name="dialog_title_input_pn_hint">Personal Number</string>
    <string name="dialog_title_input_phone">Enter Your Phone Number</string>
    <string name="dialog_title_input_phone_hint">Phone Number</string>
    <string name="err_user_name_length">Name should not be more than 40 characters</string>
    <string name="err_user_phone_length">Phone Number should be between 6 to 15 characters</string>
    <string name="err_user_empid_length">Personal Number should not be more than 8 characters</string>
    <string name="err_complete_profile">Please complete your profile first</string>
    <string name="button_input_phone">Your Phone Number</string>
    <string name="button_change_user_profile">User Profile</string>
    <string name="stop">Stop</string>
</resources>
